{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 4,
  "lineage": "f1accf2d-bc6b-32ec-70e9-c2ec557c83cc",
  "resources": [
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:elastic-ip/eipalloc-05d13f0ca0b805cd0",
            "domain": "vpc",
            "id": "eipalloc-05d13f0ca0b805cd0",
            "public_dns": "ec2-52-65-177-54.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.177.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Harvest-Shop-PublicIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:vpc/vpc-0377aacc56a5ecd18",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b0ad6654e2523285",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01e99e34e434156b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0377aacc56a5ecd18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-027d42f2324a3d4d4",
            "owner_id": "762233729349"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d13f0ca0b805cd0",
            "association_id": "eipassoc-02aebf8059b59436f",
            "connectivity_type": "public",
            "id": "nat-0d882b0cee6bb4b9b",
            "network_interface_id": "eni-07a1ca5978b0aaafd",
            "private_ip": "172.31.1.173",
            "public_ip": "52.65.177.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04a83ee804d50d8e1",
            "tags": {
              "Name": "harvest-analytics-production-nat",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "tags_all": {
              "Name": "harvest-analytics-production-nat",
              "Service": "harvest-analytics",
              "Stage": "production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.data.aws_eip.nat"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:route-table/rtb-0849c448f719ab883",
            "id": "rtb-0849c448f719ab883",
            "owner_id": "762233729349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d882b0cee6bb4b9b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "harvest-analytics-production-private-rt",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "tags_all": {
              "Name": "harvest-analytics-production-private-rt",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377aacc56a5ecd18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.data.aws_eip.nat",
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8fa1ac774bada90",
            "route_table_id": "rtb-0849c448f719ab883",
            "subnet_id": "subnet-0cf1c3d22ca06b923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_a",
            "module.networking.data.aws_eip.nat",
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd55b09ef33c1bc6",
            "route_table_id": "rtb-0849c448f719ab883",
            "subnet_id": "subnet-009441660dc1402fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_b",
            "module.networking.data.aws_eip.nat",
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "analytics_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:security-group/sg-0f7514c5efbad73aa",
            "description": "Analytics Lambda functions - controls egress to RDS and internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "PostgreSQL within VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0f7514c5efbad73aa",
            "ingress": [],
            "name": "harvest-analytics-production-lambda-sg",
            "name_prefix": "",
            "owner_id": "762233729349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "harvest-analytics-production-lambda-sg",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "tags_all": {
              "Name": "harvest-analytics-production-lambda-sg",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0377aacc56a5ecd18"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:subnet/subnet-0cf1c3d22ca06b923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.31.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf1c3d22ca06b923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233729349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harvest-analytics-production-private-a",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "tags_all": {
              "Name": "harvest-analytics-production-private-a",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "vpc_id": "vpc-0377aacc56a5ecd18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:762233729349:subnet/subnet-009441660dc1402fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.31.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009441660dc1402fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233729349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "harvest-analytics-production-private-b",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "tags_all": {
              "Name": "harvest-analytics-production-private-b",
              "Service": "harvest-analytics",
              "Stage": "production"
            },
            "vpc_id": "vpc-0377aacc56a5ecd18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}